Invoke Makefile.PL and Build.PL with perl -I. as part of the fixes for CVE-2016-1238
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ debhelper (9.20160709+unreleased) UNRELEASED; urgency=medium
   * dh_installinit,dh_systemd_start: Apply patches from
     Peter Pentchev to make -R default in compat 10 (as
     documented, but not as implemented).
+  * perl_{build,makemaker}.pm: Apply patch from Dominic
+    Hargreaves to explicitly pass -I. to perl.  This is to
+    assist with the fix for CVE-2016-1238.  (Closes: #832436)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Jul 2016 11:51:46 +0000
 
