dh: Simplify sequence definitions
As of commit d68d6751a86052246433bf4381a5f8daac45f90d, the
SequencerUtil function "unpack_sequence" should correctly transform
the "compat 9"-style sequences into "compat 8"-style sequences.
Exploit this to avoid the duplicated definitions.

Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ debhelper (11.1.6) UNRELEASED; urgency=medium
     attempt to make pkgfile() use "DEB_TARGET_ARCH{,_OS}"
     (see 11.1.5~alpha1).  Thanks to Andreas Beckmann for reporting
     the issue.  (Closes: #891546)
+  * dh: Refactor handling of sequences to simplify some code paths.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000
 
